# tsm_mach_le_data

./: .gitignore  README.md  requirements.txt  tests
.github/workflows/: main.yml
model/poc/: graph-nn-link-prediction.ipynb  graph-nn-link-regression.ipynb
project_documents/: Movie_recommendation_architecture_V001.drawio  Movie_recommendation_architecture_V002.drawio  Movie_recommendation_model_pipeline_V001.drawio  final_presentation_cinematch.pptx  ideas.md  pitch_deck_cinematch.pptx  pitch_deck_movie_recc.pptx
src/: README.md  docker-compose.db_included.yml  docker-compose.yml
src/backend/: .dockerignore  .env  database.py  dockerfile  main.py  requirements.txt  run_dev_server.py
src/backend/dockerfiles/: dockerfile
src/backend/models/: enum.py  movie.py  rating.py  user.py
src/backend/routers/: enum.py  recommendation.py  schemas.py  version.py
src/backend/schemas/: enum.py  recommendation.py  schemas.py  version.py
src/backend/services/: enum.py  recommendation.py  test.py
src/frontend/: .env  api_client.py  app_state.py  config.py  dockerfile  graph.py  main.py  requirements.txt
src/model-service/: .dockerignore  .env_sample  Dockerfile  README.md  graph_regression.py  main.py  model-service.py  pyproject.toml  schemas.py  service.py
test/: testbasic.py
training/: README.md  pyproject.toml
training/poc/: graph-nn-link-prediction.ipynb  graph-nn-link-regression-more-data.ipynb  graph-nn-link-regression.ipynb  train_val_split.excalidraw
training/poc/artifacts/movie-rec-link-regression-weights_v5/: model_best.pt
