[project]
name = "tsm_mach_le_data_model-service"
version = "0.1.0"
description = "A GNN-based link prediction/regression model for movie recommendation."
readme = "README.MD"
requires-python = ">=3.12,<3.13"
dependencies = [
  "pandas",
  "wandb",
  "python-dotenv",
  "fastapi",
  "uvicorn",
  "ruff"
]

[project.optional-dependencies]
cpu = ["onnxruntime", "torch==2.8.0", "torch-geometric"]

gpu = ["onnxruntime-gpu", "torch==2.8.0", "torch-geometric"]


[tool.uv]
environments = [
  "python_full_version >= '3.12' and python_full_version < '3.13'",
]
conflicts = [[{ extra = "cpu" }, { extra = "gpu" }]]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu129", extra = "gpu" },
]

[tool.fastapi]
entrypoint = "main.py"
